=========
Changelog
=========

Version 4.8.8  (February ??, 2014)

- Fixes in deDE localization.
- Translation files for Simplified Chinese, Traditional Chinese and Russian are now disabled.  They're not being deleted, but they'll no longer be loaded as they haven't been updated in over a year.



Version 4.8.7  (November 26, 2013)

- Fixed: Starting location of Stratholme: Liquid Gold  (thanks yunohu)
- Fixed: Starting location of Shattered Halls: Advancing the Campaign (Horde)    (thanks yunohu)
- Added missing optional prequest for Utgarde Keep: Stealing Their Thunder   (thanks yunohu)
- Special thanks to Burkhard for reminding me of these quests I forgot to add.  Thank you!

- Added quests:
	- Scarlet Halls: A Worthy Challenge: Flameweaver Koegler
	- Scarlet Monastery: A Worthy Challenge: Durand
	- Scholomance: A Worthy Challenge: Darkmaster Gandling
	- Mogu'shan Palace: A Worthy Challenge: Xin the Weaponmaster
	- Shado-Pan Monastery: A Worthy Challenge: Sha of Hatred
	- Stormstout Brewery: Is That A Real Measurement?
	- Stormstout Brewery: A Worthy Challenge: Yan-zhu the Uncasked
	- Temple of the Jade Serpent: A Worthy Challenge: Sha of Doubt
	- Gate of the Setting Sun: A Worthy Challenge: Raigonn
	- Siege of Niuzao Temple: A Worthy Challenge: Wing Leader Ner'onok
	- Siege of Orgrimmar: The Last Gasp of Y'Shaarj
	- Siege of Orgrimmar: Why Do We Fight?

	

Version 4.8.6  (September 21, 2013)

- Updated TOC file for Patch 5.4
- Localizations updated: deDE, enUS
- Added support for Siege of Orgrimmar.

- Added quests:
	- Wailing Caverns: Disciples of Naralex (Horde)
	- Siege of Orgrimmar: Judgment of the Black Prince
	- Temple of the Jade Serpent: The Lost Secret of the Secret Ingredient
	- Temple of the Jade Serpent: Bad Feeling, Worse Result
	


Version 4.8.5  (July 30, 2013)

- Localizations updated: deDE, enUS

- Added quests:
	- Throne of Thunder: Requiem for a Queen
	- Throne of Thunder: Taming the Tempest
	- Throne of Thunder: Rocks Fall, People Die